--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
                 <h3 class="experience__text">Challenge Alura Portafolio profesional</h3>
                     <div class="experince__description">
                         <!--ENLACE DEL PROYECTO-->
-                        <span class="experience__repo"><a href="https://github.com/anperales/encriptador"><button class="experiencia__botao--repo">Repositorio</button></a></span>
-                        <span class="experience__demo"><a href="https://anperales.github.io/encriptador/"><button class="experience__botao--demo">Ver demo</button></a></span>
+                        <span class="experience__repo"><a href="https://github.com/cromosoide/portafolio"><button class="experiencia__botao--repo">Repositorio</button></a></span>
+                        <span class="experience__demo"><a href="https://github.com/cromosoide/portafolio"><button class="experience__botao--demo">Ver demo</button></a></span>
                     </div>
             </div>            
         </div>
