actualización de index

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="perfil-container">
-            <img src="/Imagenes/imagendeperfil.jpg" alt="imagen de perfil">
+            <img src="Imagenes/imagendeperfil.jpg" alt="imagen de perfil">
         </div>
     </section>
 
