--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
         <h2 class="experience__section__title">Experiencia Profesional</h2>
         <div class="experiencie__box">
             <!--CAPTURA DE PANTALLA DEL PROYECTO-->
-            <img class="experience__img" src="Imagenes/portafolio/portafolio.svg">
+            <img class="experience__img" src="Imagenes/portafolio/portafolio.jpg">
             <div class="experience__info">
                 <h2 class="experience__title">Portafolio</h2>
                 <h3 class="experience__text">Challenge Alura Portafolio profesional</h3>
                     <div class="experince__description">
                         <!--ENLACE DEL PROYECTO-->
                         <span class="experience__repo"><a href="https://github.com/cromosoide/portafolio"><button class="experiencia__botao--repo">Repositorio</button></a></span>
-                        <span class="experience__demo"><a href="https://github.com/cromosoide/portafolio"><button class="experience__botao--demo">Ver demo</button></a></span>
+                        <span class="experience__demo"><a href="https://cromosoide.github.io/portafolio/"><button class="experience__botao--demo">Ver demo</button></a></span>
                     </div>
             </div>            
         </div>
