--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Portafolio</title>
+    <title>Portafolio - Santiago Gil</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
